data/derived/comb/progs/unify/prog1738.ml.out
Characters 22-39:
  let _ = Printf.printf (string_of_int 1);;
                        ^^^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         ('a, out_channel, unit) format =
           ('a, out_channel, unit, unit, unit, unit)
           CamlinternalFormatBasics.format6
